--- a/Resume.html
+++ b/Resume.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1><b><center>RESUME</center></h1><b>
-    <P><b>Prachi Karakoti</b></P>
+    <h2><b>Prachi Karakoti</b></h2>
 <p>(Btech Undergraduate)</p>
 <br>
     <p>159,TF-1,Niti khand 1</p>
@@ -15,7 +15,8 @@
     <p>Mob No.:9643592346</p>
     <p>Email:prachikarakoti587@gmail.com</p>
     <hr style="border:1px solid black">
-    <h2>ACADEMIC QUALIFICATION</h2>
+    <div style="background-color: antiquewhite">
+        <h2>ACADEMIC QUALIFICATION</h2></div>
     <table style="width:100%" border="1">
         <th>S.No.</th>
         <th>Qualification</th>
@@ -38,19 +39,22 @@
         </tr>
     </table>
     <br>
-    <h2>EXPERIENCE</h2>
+     <div style="background-color:antiquewhite">
+    <h2>EXPERIENCE</h2></div>
     <ul>
         <li>Did summer internship at Myntra</li>
         <li>Created Amazon and Zomato clone</li>
         <li>Won many hackathons</li>
     </ul>
-    <h2>PERSONAL INFORMATION</h2>
+     <div style="background-color:antiquewhite">
+    <h2>PERSONAL INFORMATION</h2></div>
     <p>Father's Name : Bhaskar Singh</p>
     <p>Date of Birth : 20-07-2007</p>
     <p>Language Known : Hindi And English</p>
     <p>Gender : Female</p>
     <p>Nationality : Indian</p>
-    <h2>DECLARATION</h2>
+        <div style="background-color:antiquewhite">
+    <h2>DECLARATION</h2></div>
     <p>I hereby declared that the above information given by me is true to best of my knowledge</p>
 </body>
 </html>
